--- a/nokidsbooks/self_help.html
+++ b/nokidsbooks/self_help.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -160,7 +160,7 @@
         <div class="container">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-3 mt-3">
-            <h5 class="text-light-beige">Book Lists</h5>
+            <h3 class="text-light-beige">Book Lists</h3>
             <p>
               <a href="top10.html" class="text-white">
                 Top 10
@@ -193,7 +193,7 @@
             </p>
           </div>
           <div class="col-12 col-md-6 col-lg-3 mt-3">
-            <h5 class="text-light-beige">Get Involved</h5>
+            <h3 class="text-light-beige">Get Involved</h3>
             <p>
               <a href="suggest_a_book.html" class="text-white">
                 Contribute to book lists
@@ -211,7 +211,7 @@
             </p>
           </div>
           <div class="col-12 col-md-6 col-lg-3 mt-3">
-            <h5 class="text-light-beige">About</h5>
+            <h3 class="text-light-beige">About</h3>
             <p>
               <a href="index.html#faqs" class="text-white">
                 FAQs
@@ -224,7 +224,7 @@
             </p>
           </div>
           <div class="col-12 col-md-6 col-lg-3 mt-3">
-            <h5 class="text-light-beige">Contact</h5>
+            <h3 class="text-light-beige">Contact</h3>
             <p>
               I'd love to hear from you! So please,
               <a href="mailto:keira@nokidsbooks.com" class="text-white">
