Add new books and edit front page for mobile

--- a/nokidsbooks/biography.html
+++ b/nokidsbooks/biography.html
@@ -342,6 +342,27 @@
               <td></td>
               <td></td>
             </tr>
+            <tr>
+              <td>Salt Water and Honey: Lost Dreams, Good Grief and a Better Story</td>
+              <td>Lizzie Lowrie</td>
+              <td>From a Christian perspective</td>
+              <td>Miscarriage</td>
+              <td>9781788930956</td>
+            </tr>
+            <tr>
+              <td>Over The Top: A Raw Journey to Self Love</td>
+              <td>Jonathan Van Ness</td>
+              <td>Queer/LGBTIQA+, no parenthood or childless focus</td>
+              <td>Abuse, mental health, self harm</td>
+              <td>9780062906373</td>
+            </tr>
+            <!-- <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr> -->
           </tbody>
         </table>
       </div>
