--- a/nokidsbooks/fiction.html
+++ b/nokidsbooks/fiction.html
@@ -76,6 +76,222 @@
             <td></td>
           </tr> -->
           <tr>
+            <td>The Lunar Cats</td>
+            <td>Lynne Truss</td>
+            <td>Horror, Fantasy, Mystery, Humour</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9781784756888</td>
+          </tr>
+          <tr>
+            <td>Cat Out of Hell</td>
+            <td>Lynne Truss</td>
+            <td>Horror, Fantasy, Mystery, Humour</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9781612194424</td>
+          </tr>
+          <tr>
+            <td>When No One is Watching</td>
+            <td>Alyssa Cole</td>
+            <td>Mystery, Horror, Thriller</td>
+            <td>No parenthood focus</td>
+            <td>Racism</td>
+            <td>9780063036048</td>
+          </tr>
+          <tr>
+            <td>Death Before Dessert</td>
+            <td>A.E. Radley</td>
+            <td>Mystery, Cosy</td>
+            <td>LGBTIQA+, Childfree</td>
+            <td></td>
+            <td>9781912684328</td>
+          </tr>
+          <tr>
+            <td>Of Ants and Dinosaurs</td>
+            <td>Cixin Liu</td>
+            <td>Science Fiction</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9781789546125</td>
+          </tr>
+          <tr>
+            <td>Arch Conspirator</td>
+            <td>Veronica Roth</td>
+            <td>Dystopian, Science Fiction, Retelling, Mythology</td>
+            <td>Retelling of Antigone. CNBC characters. Interesting but trigger heavy.</td>
+            <td>Reproductive science,  IVF-like technology,  religious/genetic oppression</td>
+            <td>9781250855466</td>
+          </tr>
+          <tr>
+            <td>Mornings with Rosemary (formerly The Lido)</td>
+            <td>Libby Page</td>
+            <td>Contemporary</td>
+            <td>Friendship between older CNBC character and young woman.</td>
+            <td></td>
+            <td>9781501182051</td>
+          </tr>
+          <tr>
+            <td>Half Sick of Shadows</td>
+            <td>Laura Sebastian</td>
+            <td>Historical Fiction, Retelling, Mythology, Fantasy</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9780593200520</td>
+          </tr>
+          <tr>
+            <td>The Lost Apothecary</td>
+            <td>Sarah Penner</td>
+            <td>Historical Fiction, Mystery</td>
+            <td>Childless and plan B themes</td>
+            <td></td>
+            <td>9780778311010</td>
+          </tr>
+          <tr>
+            <td>The Bookshop of Second Chances</td>
+            <td>Jackie Fraser</td>
+            <td>Contemporary romance</td>
+            <td>Single, childless/free character in her 40s</td>
+            <td></td>
+            <td>9780593355657</td>
+          </tr>
+          <tr>
+            <td>The Flatshare</td>
+            <td>Beth O'Leary</td>
+            <td>Contemporary romance</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9781250295651</td>
+          </tr>
+          <tr>
+            <td>A Rogue of One's Own</td>
+            <td>Evie Dunmore</td>
+            <td>Historical Romance</td>
+            <td>Second in a series, Childfree</td>
+            <td></td>
+            <td>9781984805706</td>
+          </tr>
+          <tr>
+            <td>A perfect Equation</td>
+            <td>Elizabeth Everett</td>
+            <td>Historical Romance</td>
+            <td>First in a series</td>
+            <td></td>
+            <td>9780593200643</td>
+          </tr>
+          <tr>
+            <td>The Once and Future Witches</td>
+            <td>Alix E. Harrow</td>
+            <td>Historical Fiction, Fantasy</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9780316422017</td>
+          </tr>
+          <tr>
+            <td>The Ten Thousand Doors of January</td>
+            <td>Alix E. Harrow</td>
+            <td>Contemporary, Fantasy, Magical Realism</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9780316421973</td>
+          </tr>
+          <tr>
+            <td>The Maid</td>
+            <td>Nita Prose</td>
+            <td>Mystery</td>
+            <td>Autistic main character. No mention of childlessness or parenting.</td>
+            <td></td>
+            <td>9780593356173</td>
+          </tr>
+          <tr>
+            <td>Miss Austen</td>
+            <td>Gill Hornby</td>
+            <td>Historical Fiction</td>
+            <td>About Jane Austen's unmarried, childless sister</td>
+            <td></td>
+            <td>9781250252210</td>
+          </tr>
+          <tr>
+            <td>Mrs Rochester's Ghost</td>
+            <td>Lindsay Marcott</td>
+            <td>Mystery, Thriller, Romance</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9781542026390</td>
+          </tr>
+          <tr>
+            <td>The Music of Bees</td>
+            <td>Eileen Garvin</td>
+            <td>Contemporary</td>
+            <td>Childless main character</td>
+            <td></td>
+            <td>9780593183939</td>
+          </tr>
+          <tr>
+            <td>The Power</td>
+            <td>Naomi Alderman</td>
+            <td>Dystopian, Science Fiction</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9780316547604</td>
+          </tr>
+          <tr>
+            <td>Book Lovers</td>
+            <td>Emily Henry</td>
+            <td>Romance</td>
+            <td>Childfree</td>
+            <td></td>
+            <td>9780593334836</td>
+          </tr>
+          <tr>
+            <td>The House by the Cerulean Sea</td>
+            <td>T.J. Kline</td>
+            <td>Fantasy, Contemporary</td>
+            <td></td>
+            <td>Fostering, adoption</td>
+            <td>9781250217318</td>
+          </tr>
+          <tr>
+            <td>The Invisible Life of Addie LaRue</td>
+            <td>V.E. Schwab</td>
+            <td>Historical Fiction, Contemporary Fiction, Fantasy</td>
+            <td>Main character without children</td>
+            <td></td>
+            <td>9780765387561</td>
+          </tr>
+          <tr>
+            <td>Moonlight and the Pearler's Daughter</td>
+            <td>Lizzie Cook</td>
+            <td>Historical Fiction, Mystery</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9781982180492</td>
+          </tr>
+          <tr>
+            <td>The Housekeepers</td>
+            <td>Alex Hay</td>
+            <td>Historical fiction, heist</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9781525805004</td>
+          </tr>
+          <tr>
+            <td>Ink Blood Sister Scribe</td>
+            <td>Emma Törz</td>
+            <td>Contemporary fiction, magic, mystery</td>
+            <td>No parenthood focus</td>
+            <td></td>
+            <td>9780063253469</td>
+          </tr>
+          <tr>
+            <td>The Bandit Queens</td>
+            <td>Parini Shroff</td>
+            <td>Mystery, Thriller, Contemporary Indian</td>
+            <td>Female friendships, childless-not-by-choice lead character</td>
+            <td></td>
+            <td>9780593498958</td>
+          </tr>
+          <tr>
             <td>The Hollow Sea</td>
             <td>Annie Kirby</td>
             <td>Magical Realism, Contemporary</td>
