--- a/nokidsbooks/fiction_series.html
+++ b/nokidsbooks/fiction_series.html
@@ -25,7 +25,6 @@
     <script src="static/js/jquery.min.js"></script>
     <script src="static/js/bootstrap.bundle.min.js"></script>
     <script src="static/js/datatables.min.js"></script>
-    <title>NoMo Reads</title>
   </head>
 
   <body>
@@ -71,6 +70,14 @@
         </tr>
       </thead>
       <tbody>
+          <tr>
+            <td>Constable Twitten Mysteries</td>
+            <td>Lynne Trusse</td>
+            <td>Cozy Mysteries, Historical Fiction, Humour</td>
+            <td></td>
+            <td></td>
+            <td>9781635570557</td>
+          </tr>
           <tr>
             <td>Lady Hardcastle Mysteries</td>
             <td>T.E. Kinsey</td>
