--- a/nokidsbooks/index.html
+++ b/nokidsbooks/index.html
@@ -27,10 +27,10 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand pb-0" href="#">
+        <div class="navbar-brand pb-0">
           <h1 class="text-near-black display-1 pb-0 my-0" style="font-family: 'Caprasimo';">Books. No kids.</h1>
-          <p class="lead">A resource for readers who are childless-not-by-choice or childfree.</p>
-        </a>
+          <p class="lead text-wrap">A resource for childless and child-free readers.</p>
+        </div>
       </div>
     </nav>
 
@@ -38,32 +38,35 @@
     <div class="container-fluid px-0" style="background: url('static/images/reader.jpg') no-repeat center; background-size: cover; height: 75vh;">
     </div>
 
-    <div class="row">
-      <div class="bg-light-beige col-lg-6 col-12">
-        <div class="row">
-          <div class="col-12 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3 d-flex justify-content-around align-items-center py-5 px-4">
-            <div class="card w-100 my-lg-5 p-3 bg-white">
-              <div class="card-body text-near-black text-center">
-                <h2 style="font-family: 'Caprasimo';">Book Lists</h2>
-                <p>Books for childless people.</p>
-                <p><a href="book_lists.html">Lists by genre</a></p>
-                <p><a href="top10.html">See our Top 10</a></p>
-                <p><a href="suggest_a_book.html">Suggest a book</a></p>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="bg-light-beige col-lg-6 col-12">
+          <div class="row">
+            <div class="col-12 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3 d-flex justify-content-around align-items-center py-5 px-4">
+              <div class="card w-100 my-lg-5 p-3 bg-white">
+                <div class="card-body text-near-black text-center">
+                  <h2 style="font-family: 'Caprasimo';">Book Lists</h2>
+                  <p>Books for childless people.</p>
+                  <p><a href="book_lists.html">Lists by genre</a></p>
+                  <p><a href="top10.html">See our Top 10</a></p>
+                  <p><a href="suggest_a_book.html">Suggest a book</a></p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="bg-sea-foam col-lg-6 col-12">
-        <div class="row">
-          <div class="col-12 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3 d-flex justify-content-around align-items-center py-5 px-4">
-            <div class="card w-100 my-5 p-3 bg-white">
-              <div class="card-body text-center">
-                <h2 style="font-family: 'Caprasimo';">Library Project</h2>
-                <p>Make your library more inclusive</p>
-                <p><a href="ask_your_library.html">Ask your library to buy a book</a></p>
-                <p><a href="libraries_in_wcw.html">Support World Childless Week</a></p>
-                <p><a href="for_librarians.html">Information for librarians</a></p>
+        <div class="bg-sea-foam col-lg-6 col-12">
+          <div class="row">
+            <div class="col-12 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3 d-flex justify-content-around align-items-center py-5 px-4">
+              <div class="card w-100 my-5 p-3 bg-white">
+                <div class="card-body text-center">
+                  <h2 style="font-family: 'Caprasimo';">Library Project</h2>
+                  <p>Make your library more inclusive</p>
+                  <p><a href="ask_your_library.html">Ask your library to buy a book</a></p>
+                  <p><a href="libraries_in_wcw.html">Support World Childless Week</a></p>
+                  <p><a href="for_librarians.html">Information for librarians</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -124,7 +127,7 @@
               and embrace us as part of their communities.
             </p>
           </div>
-          <div class="col-xl-5 offset-2 col-lg-6 col-12">
+          <div class="col-xl-5 offset-lg-2 col-lg-6 col-12">
             <div class="accordion" id="accordionExample">
               <div class="accordion-item">
                 <h2 class="accordion-header">
