--- a/nokidsbooks/non_fiction.html
+++ b/nokidsbooks/non_fiction.html
@@ -78,6 +78,14 @@
               <td></td>
             </tr> -->
             <tr>
+              <td>The Baby Matrix: Why Freeing Our Minds From Outmoded Thinking About Parenthood & Reproduction Will Create a Better World</td>
+              <td>Laura Carroll</td>
+              <td>Sociology, Psychology, Feminism, Philosophy</td>
+              <td>Pronatalism</td>
+              <td></td>
+              <td>9780615642994</td>
+            </tr>
+            <tr>
               <td>Childlessness in the Age of Communication: Deconstructing Silence</td>
               <td>Cristina Archetti</td>
               <td></td>
@@ -212,6 +220,14 @@
               <td></td>
               <td></td>
               <td>9781683649274</td>
+            </tr>
+            <tr>
+              <td>How to Be Childless: A History and Philosophy of Life Without Children </td>
+              <td>Rachel Chrastil</td>
+              <td></td>
+              <td>History</td>
+              <td></td>
+              <td>9780190918620 </td>
             </tr>
           </tbody>
         </table>
