--- a/nokidsbooks/biography.html
+++ b/nokidsbooks/biography.html
@@ -356,6 +356,13 @@
               <td>Abuse, mental health, self harm</td>
               <td>9780062906373</td>
             </tr>
+            <tr>
+              <td>I Always Wanted to Be a Dad</td>
+              <td>Robert Nurden</td>
+              <td>Childless men</td>
+              <td></td>
+              <td>9781838447779</td>
+            </tr>
             <!-- <tr>
               <td></td>
               <td></td>
